# life-os

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  watchdog.py
.githooks/: pre-commit  precommit_check.py
bogi/: __init__.py  __main__.py  agent.py  cli.py  config.py  db.py  llm.py  observability.py  recovery.py  redaction.py  singleton.py  telegram_bot.py  tz.py
bogi/models/: __init__.py  schema.py
bogi/modules/: __init__.py  approval_exec.py  approvals.py  brief.py  browser.py  calendars.py  capture.py  code_runner.py  communication.py  documents.py  files.py  fmi.py  gcal.py  general.py  gmail.py  habits.py  long_term_memory.py  memory.py  memory_pipeline.py  money.py  monitors.py  obsidian.py  people.py  sanitize.py  skills.py  tool_permissions.py  voice.py  websearch.py
bogi/web/: __init__.py  api.py  app.py  auth.py  session.py
bogi/web/static/: dashboard.html
docs/: ARCHITECTURE.md  CURRENT_REAL_STATE.md  OBSERVABILITY_PLAN.md  SECRETS_POLICY.md  index.html
evals/: __init__.py  rag_eval.py  runner.py  scenarios.py
litellm/: config.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_conversation_memory.py  0003_memories.py  0004_one_active_thread.py  0005_memory_v1.py  0006_approvals.py  0007_memory_usage.py  0008_chunks_trgm.py  0009_life_os.py
scripts/: build_demo.py  restart_bot.ps1  screenshot_dashboard.py  stop_bot.ps1
skills/: README.md
skills/code-review-bg/: SKILL.md
skills/concept-quiz-bg/: SKILL.md
skills/daily-brief-bg/: SKILL.md
skills/exam-study-plan-bg/: SKILL.md
skills/explain-like-mentor-bg/: SKILL.md
skills/fmi-deadline-triage/: SKILL.md
skills/lecture-notes-bg/: SKILL.md
skills/research-summary-bg/: SKILL.md
skills/university-email-bg/: SKILL.md
tests/: test_approvals.py  test_brief.py  test_browser_extract.py  test_calendar_approval.py  test_calendars.py  test_capture.py  test_evals_runner.py  test_gcal_parse.py  test_gmail.py  test_gmail_send.py  test_habits.py  test_memory_rich.py  test_memory_v1.py  test_money.py  test_monitors.py  test_people.py  test_rag_hybrid.py  test_rag_integration.py  test_redaction.py  test_sanitize.py  test_secret_scan.py  test_skills.py  test_smoke.py  test_tool_permissions.py  test_voice.py  test_web_api.py  test_web_auth.py  test_websearch.py
vault/: README.md
