[project]
name = "bogi-agent"
version = "0.1.0"
description = "BogiAgent — personal AI assistant for FMI workflow"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bogdan", email = "bogdan.mstefanov@gmail.com" },
]
dependencies = [
    # Agent framework
    "pydantic-ai>=0.0.13",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # Web / API
    "httpx>=0.28",
    "playwright>=1.49",
    "ddgs>=9.0",

    # Telegram
    "python-telegram-bot>=21.0",

    # CLI
    "typer>=0.15",
    "rich>=13.9",

    # Embeddings + chunking
    "sentence-transformers>=3.0",
    "langchain-text-splitters>=0.3",

    # Voice transcription (local, key-free; PyAV decodes ogg/opus)
    "faster-whisper>=1.0",

    # Document parsing
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "python-pptx>=1.0",

    # Utilities
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",

    # Google APIs (Calendar, later Gmail)
    "google-api-python-client>=2.140",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",

    # Process introspection (singleton lock — PID liveness checks, status CLI)
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.14",
]
# Observability is opt-in: install + set LOGFIRE_TOKEN to turn on tracing.
# Without it, bogi/observability.py is a no-op. See docs/OBSERVABILITY_PLAN.md.
observability = [
    "logfire>=3.0",
]

[project.scripts]
bogi = "bogi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bogi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the test session so async DB engine connections
# (created at module import) don't get reused on a closed loop.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
